gardener/networkpolicies/garden-cert-management.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-cert-management
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: garden-cert-management
  egress:
    - {}
  policyTypes:
  - Egress
