gardener/networkpolicies/garden-extensions.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 23ke-extensions
  namespace: garden
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - gardener-extension-admission-azure
          - gardener-extension-admission-openstack
          - gardener-extension-admission-hcloud
          - gardener-extension-admission-gcp
          - gardener-extension-admission-aws
          - gardener-extension-admission-alicloud
  egress:
    - {}
  policyTypes:
  - Egress
