gardener/networkpolicies/garden-gardener-admission-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 23ke-gardener-admission-controller
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: admission-controller
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: gardener
            role: apiserver
      - podSelector:
          matchLabels:
            app: garden
            component: kube-apiserver
      - podSelector:
          matchLabels:
            app: gardener
            role: controller-manager
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
