gardener/networkpolicies/garden-gardener-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-gardener-apiserver
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: apiserver
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: garden
            component: kube-apiserver
      - podSelector:
          matchLabels:
            app: gardener
            role: admission-controller
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
