gardener/networkpolicies/garden-gardener-controller-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-gardener-controller-manager
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: controller-manager
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: gardener
            role: apiserver
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
