gardener/networkpolicies/garden-gardener-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-gardener-dashboard
  namespace: garden
spec:
  egress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gardener-dashboard
  ingress:
    - from:
        - podSelector:
            - matchLabels:
                yake.cloud/app: ingress-nginx
  policyTypes:
    - Egress
    - Ingress
