gardener/networkpolicies/garden-gardener-metrics-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-gardener-metrics-exporter
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: metrics-exporter
  egress:
    - {}
  policyTypes:
  - Egress
