gardener/networkpolicies/garden-gardener-scheduler.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-gardener-scheduler
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: scheduler
  egress:
    - {}
  policyTypes:
  - Egress
