gardener/networkpolicies/garden-gardenlet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 23ke-gardenlet
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: gardenlet
  egress:
    - {}
  policyTypes:
  - Egress
