gardener/networkpolicies/garden-identity.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yake-identity
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: identity
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            - matchLabels:
                yake.cloud/app: ingress-nginx
  policyTypes:
    - Egress
    - Ingress
