gardener/networkpolicies/garden-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 23ke-ingress-nginx
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app: nginx-ingress
      app.kubernetes.io/component: controller
      23ke.cloud/component: ingress-nginx
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-garden-ingress-nginx-webhook
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: admission-webhook
      app.kubernetes.io/instance: garden-ingress-nginx
      23ke.cloud/component: ingress-nginx
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
